add download section HTML code to the project

--- a/index.html
+++ b/index.html
@@ -202,6 +202,60 @@
     </div>
   </section>
 
+  <!-- Download -->
+
+  <section id="download-section">
+    <div class="download-text">
+      <h3>Download the extension</h3>
+      <p>We've got more browsers in the pipeline. Please do let us know if you've got a favourite you'd like us to prioritize.</p>
+    </div>
+    <div class="container cards-container">
+      <div class="row">
+        <div class="browser-columns">
+          <div class="column column-chrome download-column">
+            <div class="card download-cards" id="chrome-card">
+              <img src="Images/logo-chrome.svg" class="card-img-top download-logos" alt="logo Chrome">
+                <div class="card-body">
+                  <h5 class="card-title">Add to Chrome</h5>
+                    <p class="card-text">Minimum version 62</p>
+                </div>
+                <div class="card-body card-separation">
+                  <button button="" type="button" class="btn btn-primary blue-button download-button"
+                                id="download-chrome">Add & Install Extension</button>
+                </div>
+            </div>
+          </div>
+          <div class="column column-firefox download-column">
+            <div class="card download-cards" id="firefox-card">
+              <img src="Images/logo-firefox.svg" class="card-img-top download-logos" alt="logo Firefox">
+                <div class="card-body">
+                  <h5 class="card-title">Add to Firefox</h5>
+                    <p class="card-text">Minimum version 55</p>
+                </div>
+              <div class="card-body card-separation">
+                <button button="" type="button" class="btn btn-primary blue-button download-button" id="download-Firefox">Add & Install Extension</button>
+              </div>
+            </div>
+          </div>
+          <div class="column column-Opera download-column">
+            <div class="card download-cards" id="opera-card">
+              <img src="Images/logo-opera.svg" class="card-img-top download-logos" alt="logo Opera">
+                <div class="card-body">
+                  <h5 class="card-title">Add to Opera</h5>
+                    <p class="card-text">Minimum version 46</p>
+                </div>
+                <div class="card-body card-separation">
+                  <button button="" type="button" class="btn btn-primary blue-button download-button" id="download-Opera">Add & Install Extension</button>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+</section>
+
     <!-- Bootstrap -->
   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   
