add FAQs HTML code to the project

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
                       </div>
                     </div>
                   </div>
+
                   <div class="col features-text">
                     <h3>Bookmark in one click</h3>
                       <div class="features-text-only">
@@ -188,6 +189,7 @@
                   </div>
                 </div>
               </div>
+
               <div class="col features-text">
                 <h3>Share your bookmarks</h3>
                   <div class="features-text-only">
@@ -225,6 +227,7 @@
                 </div>
             </div>
           </div>
+
           <div class="column column-firefox download-column">
             <div class="card download-cards" id="firefox-card">
               <img src="Images/logo-firefox.svg" class="card-img-top download-logos" alt="logo Firefox">
@@ -237,6 +240,7 @@
               </div>
             </div>
           </div>
+
           <div class="column column-Opera download-column">
             <div class="card download-cards" id="opera-card">
               <img src="Images/logo-opera.svg" class="card-img-top download-logos" alt="logo Opera">
@@ -252,9 +256,62 @@
         </div>
       </div>
     </div>
+  </section>
 
+  <!-- Q & A -->
 
-</section>
+  <section class="faqs-section">
+    <div class="faqs-text">
+      <h3>Frequently Asked Questions</h3>
+        <p>Here are some of our FAQs. If you have any other questions you'd like answered please feel free to email us.</p>
+    </div>
+    <div class="faqs-accordion">
+      <div class="accordion accordion-flush" id="accordion-bookmark">
+        <div class="accordion-item" id="accordion-itemOne">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed accordion-title" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne">What is Bookmark?</button>
+          </h2>
+          <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi eveniet corporis illum porro doloremque accusantium sapiente a iure voluptas aut et quis, fugit dignissimos sint dolorum laborum pariatur! Corporis, error. 
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed accordion-title" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo">How can I request a new browser?</button>
+          </h2>
+
+          <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis pariatur dolore dicta aspernatur aperiam eos, totam velit doloribus corrupti rem maiores soluta numquam temporibus facere illum. Commodi aperiam error vero.  
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed accordion-title" type="button"
+                        data-bs-toggle="collapse" data-bs-target="#flush-collapseThree">Is there a mobile app?</button>
+          </h2>
+          <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos nostrum et debitis sed dolorem necessitatibus officiis quidem, maiores aut reiciendis aperiam recusandae sapiente, asperiores obcaecati, voluptates ipsum animi ducimus? Rem.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item" id="accordion-itemFour">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed accordion-title" type="button"
+                        data-bs-toggle="collapse" data-bs-target="#flush-collapseFour">what about other Chromium browsers?</button>
+          </h2>
+          <div id="flush-collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet ipsum vel autem doloribus similique ratione obcaecati repudiandae pariatur minus corporis. Ducimus tempore excepturi qui vel reprehenderit commodi repellendus veritatis possimus.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="faqs-button">
+      <button button="" type="button" class="btn btn-primary blue-button" id="faqs-button">More Info</button>
+    </div>
+  </section>
 
     <!-- Bootstrap -->
   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
