add CSS style to navBar

--- a/index.html
+++ b/index.html
@@ -5,20 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Jordi Lara"> 
   <title>Maquetacio-Bootstrap</title>
-  <!-- bootstrap -->
-  <script src="node_modules/bootstrap/dist/css/bootstrap.min.css."></script>
   <!-- custom css -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" type= text/css href="./style.css">
 </head>
 <body>
 
   <!-- navBar -->
 
-  <section id="navbar">
+  <section id="navbar-section">
     <nav class="navbar navbar-expand-md navbar-light bg-transparent">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="Images/logo-bookmark.svg" alt="Bookmark Logo" loading="lazy"/>
+          <img src="Images/logo-bookmark.svg" height="20" alt="Bookmark Logo" loading="lazy"/>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler">
           <img src="Images/icon-hamburger.svg" class="icon-logo" alt="menu icon">
@@ -35,7 +33,7 @@
               <a class="nav-link" id="nav-contact" href="#">CONTACT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" btn btn-custom id="login" href="#">LOGIN</a>
+              <a class="nav-link btn btn-custom" id="login" href="#">LOGIN</a>
             </li>
           </ul>
         </div>
@@ -62,7 +60,6 @@
               <div class="button">
                 <button button type="button" class="btn btn-primary blue-button" id="getit-chrome">Get it on Chrome</button>
               </div>
-            </div>
 
             <div class="button">
               <button button type="button" class="btn btn-primary" id="getit-firefox">Get it on Firefox</button>
@@ -71,16 +68,16 @@
         </div>
       </div>
 
-          <div class="col" id="column2">
-            <div class="imagen-forma">
-              <div class="shape1-container">
-                <div class="shape1"></div>
-              </div>
+      <div class="col" id="column2">
+              <div class="imagen-forma">
+                <div class="shape1-container">
+                  <div class="shape1"></div>
+                </div>
 
-              <div class="illustration-hero">
-                <img src="Images/illustration-hero.svg" loading="lazy" id="illustration-hero" />
+                <div class="illustration-hero">
+                  <img src="Images/illustration-hero.svg" loading="lazy" id="illustration-hero" />
+                </div>
               </div>
-            </div>
           </div>
         </div>
     </div>
