add styles for features and feature tabs.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-md navbar-light bg-transparent">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="Images/logo-bookmark.svg" height="20" alt="Bookmark Logo" loading="lazy"/>
+          <img src="Images/logo-bookmark.svg" alt="Bookmark Logo" loading="lazy"/>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler">
           <img src="Images/icon-hamburger.svg" class="icon-logo" alt="menu icon">
