add CSS styles to download section and browser cards

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <body>
 
   <!-- navBar -->
-
   <section id="navbar-section">
     <nav class="navbar navbar-expand-md navbar-light bg-transparent">
       <div class="container-fluid">
@@ -150,7 +149,7 @@
             <div class="container" id="container-features-tab">
               <div class="row features-row">
                 <div class="col column-left-shapes">
-                  <div class="imagen-forma-izquierda">
+                  <div class="image-shape-left">
                     <div class="shape2-container">
                       <div class="shape2"></div>
                     </div>
@@ -177,7 +176,7 @@
             <div class="container" id="container-features-tab">
               <div class="row features-row">
                 <div class="col column-left-shapes">
-                  <div class="imagen-forma-izquierda">
+                  <div class="image-shape-left">
                     <div class="shape2-container">
                       <div class="shape2"></div>
                     </div>
